tests/tests/failing_examples/bad_attr.stderr
error: custom attribute panicked
 --> $DIR/bad_attr.rs:3:1
  |
3 | #[hoist_temporaries(snack)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid attribute - hoist_temporaries takes no arguments.
